--- a/static/sass/Profile/Profile.sass
+++ b/static/sass/Profile/Profile.sass
@@ -208,9 +208,9 @@
 			display: none
 
 		.no-songs--wrapper
-			//display: flex
-			//flex: 1
-			// max-width: 13rem
+			display: flex
+			flex: 1
+			min-height: 20rem
 			flex-direction: column
 			justify-content: center
 			align-items: center
@@ -396,6 +396,7 @@
 			min-width: inherit
 
 			.no-songs--wrapper
+
 				.upload-button
 					p
 						max-width: 20rem
